# echo

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  app.json  package-lock.json  package.json  pnpm-lock.yaml
.github/workflows/: build.yml  debug-apk.yml  desktop.yml  pages.yml
app/: +html.tsx  _layout.tsx
app/(tabs)/: _layout.tsx  index.tsx  settings.tsx
components/: AppWebView.tsx  AppWebView.web.tsx  Themed.tsx  TutorialOverlay.tsx  useColorScheme.ts
constants/: Colors.ts
context/: AppSettingsContext.tsx
lib/: layouts.tsx  lrclib.ts
plugins/: withJitPackFixed.js
server/: index.js  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src/app/: +html.tsx  _layout.tsx
src/app/(tabs)/: _layout.tsx  index.tsx  settings.tsx
src/components/: EditScreenInfo.tsx  EditorContent.tsx  Themed.tsx  TutorialOverlay.tsx  useColorScheme.ts  useColorScheme.web.ts
src/constants/: Theme.ts
src/context/: AppSettingsContext.tsx
src/lib/: lrclib.ts
